--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -1,9 +1,9 @@
 // Copyright(c) 2024 Agora.io. All rights reserved.
 
 {{#nodes}}
-{{#user_data.isEnumz}}
-{{> enum}}
-{{/user_data.isEnumz}}
+{{#user_data.isCallback}}
+{{> callback}}
+{{/user_data.isCallback}}
 {{#user_data.isStruct}}
 {{> struct}}
 {{/user_data.isStruct}}
