--- a/templates/cppplugin/AgoraUERtcEngine_filecontent.mustache
+++ b/templates/cppplugin/AgoraUERtcEngine_filecontent.mustache
@@ -58,6 +58,7 @@ namespace agora {
 
 {{#nodes}}
             {{#methods}}
+				{{^user_data.isExcluded}}
 				{{#user_data.hasConditionalDirective}}
 
 				{{{conditional_compilation_directives_infos}}}
@@ -67,6 +68,7 @@ namespace agora {
 				#endif
 
 				{{/user_data.hasConditionalDirective}}
+				{{/user_data.isExcluded}}
 			{{/methods}}
 {{/nodes}}
 
