--- a/templates/type/callback.mustache
+++ b/templates/type/callback.mustache
@@ -1,7 +1,7 @@
 /// OKOK 
 
 {{#methods}}
-{{user_data.bpCallbackDelegateMacroName}}({{user_data.bpCallbackDelegateTypeName}}{{#user_data.bpIsNoParamCallback}}{{/user_data.bpIsNoParamCallback}}{{^user_data.bpIsNoParamCallback}}, {{/user_data.bpIsNoParamCallback}}{{#parameters}}{{{type.source}}}, {{name}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
+{{user_data.bpCallbackDelegateMacroName}}({{user_data.bpCallbackDelegateTypeName}}{{#user_data.bpIsNoParamCallback}}{{/user_data.bpIsNoParamCallback}}{{^user_data.bpIsNoParamCallback}}, {{/user_data.bpIsNoParamCallback}}{{#parameters}}{{{user_data.bpParameterType}}}, {{name}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
 {{/methods}}
 
 
