--- a/templates/type/struct.mustache
+++ b/templates/type/struct.mustache
@@ -17,22 +17,44 @@ public:
 	FUABT_{{name}}(){}
 	FUABT_{{name}}(const {{user_data.fullTypeWithNamespace}} & AgoraData){
     {{#member_variables}}
-    {{name}} = AgoraData.{{name}};
+    
+		{{#user_data.bpNeedFromRawTypeConversion}}
+			{{name}} = {{user_data.bpConvertFromRawType}}(AgoraData.{{name}});
+		{{/user_data.bpNeedFromRawTypeConversion}}
+		{{^user_data.bpNeedFromRawTypeConversion}}
+			{{name}} = AgoraData.{{name}};
+		{{/user_data.bpNeedFromRawTypeConversion}}
     {{/member_variables}}
-
-    qualityAdaptIndication = UABTEnum::WrapWithUE(AgoraData.qualityAdaptIndication);
 	}
 
 	{{user_data.fullTypeWithNamespace}} CreateRawData() const {
 		{{user_data.fullTypeWithNamespace}} AgoraData;
     {{#member_variables}}
-    AgoraData.{{name}} = {{name}};
+		{{#user_data.bpNeedFromRawTypeConversion}}
+				AgoraData.{{name}} = {{user_data.bpConvertToRawType}}({{name}});
+		{{/user_data.bpNeedFromRawTypeConversion}}
+		{{^user_data.bpNeedFromRawTypeConversion}}
+			{{#user_data.bpIsUStruct}}
+				AgoraData.{{name}} = {{name}}.CreateRawData();
+			{{/user_data.bpIsUStruct}}
+			{{^user_data.bpIsUStruct}}
+				AgoraData.{{name}} = {{name}};
+			{{/user_data.bpIsUStruct}}
+		{{/user_data.bpNeedFromRawTypeConversion}}
     {{/member_variables}}
 		return AgoraData;
 	}
 
 	void FreeRawData({{user_data.fullTypeWithNamespace}} & AgoraData) const
 	{
-
+		{{#member_variables}}
+		{{^user_data.bpNeedFromRawTypeConversion}}
+		{{#user_data.bpIsUStruct}}
+		
+		{{name}}.FreeRawData(AgoraData.{{name}});
+		
+		{{/user_data.bpIsUStruct}}
+		{{/user_data.bpNeedFromRawTypeConversion}}
+		{{/member_variables}}
 	}
 }
