--- a/templates/bpplugin/bp_clazz_impl.mustache
+++ b/templates/bpplugin/bp_clazz_impl.mustache
@@ -1,7 +1,7 @@
 
 
 {{#methods}}
-  {{user_data.bpReturnType}} {{parent.user_data.bpNodeName}}::{{user_data.bpMethodName}}({{#parameters}}{{{user_data.bpParameterType}}} {{name}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
+  {{{user_data.bpReturnType}}} {{parent.user_data.bpNodeName}}::{{user_data.bpMethodName}}({{#parameters}}{{{user_data.bpParameterType}}} {{name}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
   {
 
   }
