--- a/templates/cppplugin/AgoraUERtcEngine_impl_filecontent.mustache
+++ b/templates/cppplugin/AgoraUERtcEngine_impl_filecontent.mustache
@@ -268,7 +268,7 @@ namespace agora {
                 {{^user_data.isExcluded}}
 
 {{{user_data.macro_scope_start}}}
-                {{#return_type}}{{{source}}}{{/return_type}} AgoraUERtcEngine::{{name}} ({{#parameters}}{{{type.source}}} {{name}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
+                {{#return_type}}{{{source}}}{{/return_type}} AgoraUERtcEngine::{{name}} ({{#parameters}}{{{type.clang_qualtype}}} {{name}}{{{user_data.defaultValueComment}}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
                 {
                     if (RtcEngine != nullptr) {
                         auto ret = {{user_data.callerInstanceName}}->{{name}}({{#parameters}}{{name}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}});
