--- a/templates/bpplugin/bp_clazz_impl.mustache
+++ b/templates/bpplugin/bp_clazz_impl.mustache
@@ -4,6 +4,17 @@
   {{{user_data.bpReturnType}}} {{parent.user_data.bpNodeName}}::{{user_data.bpMethodName}}({{#parameters}}{{{user_data.bpParameterType}}} {{name}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}})
   {
 
+{{#user_data.isCallback}}
+      #if (__cplusplus >= 202002L) || (defined(_MSVC_LANG) && _MSVC_LANG >= 202002L)
+	        AsyncTask(ENamedThreads::GameThread, [=, this]()
+      #else
+	        AsyncTask(ENamedThreads::GameThread, [=]()
+      #endif
+          {
+
+          });
+{{/user_data.isCallback}}
+
   }
   
 {{/methods}}
