add suffix attributes to generated code

--- a/templates/cppplugin/AgoraUERtcEngine_header_filecontent.mustache
+++ b/templates/cppplugin/AgoraUERtcEngine_header_filecontent.mustache
@@ -81,9 +81,10 @@ namespace agora {
             {{#methods}}
 				{{^user_data.isExcluded}}
 {{{user_data.macro_scope_start}}}
-					virtual {{#return_type}}{{{source}}}{{/return_type}} {{name}} ({{#parameters}}{{{type.clang_qualtype}}} {{name}}{{{user_data.defaultValue}}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}}) override;
-{{{user_data.macro_scope_end}}}
 
+{{{user_data.commentCppStyle}}}
+					virtual {{#return_type}}{{{source}}}{{/return_type}} {{name}} ({{#parameters}}{{{type.clang_qualtype}}} {{name}}{{{user_data.defaultValue}}}{{^user_data.isLast}}, {{/user_data.isLast}}{{/parameters}}) {{{user_data.suffix_attribute}}} override;
+{{{user_data.macro_scope_end}}}
 				{{/user_data.isExcluded}}
 			{{/methods}}
 {{/nodes}}
