--- a/templates/bpplugin/bp_impl_filecontent.mustache
+++ b/templates/bpplugin/bp_impl_filecontent.mustache
@@ -4,7 +4,9 @@
 {{#user_data.isCallback}}
 {{> bp_callback_impl}}
 {{/user_data.isCallback}}
+{{^user_data.isCallback}}
 {{#user_data.isClazz}}
 {{> bp_clazz_impl}}
 {{/user_data.isClazz}}
+{{/user_data.isCallback}}
 {{/nodes}}
