--- a/templates/bpplugin/bp_impl_filecontent.mustache
+++ b/templates/bpplugin/bp_impl_filecontent.mustache
@@ -1,4 +1,5 @@
 // Copyright(c) 2024 Agora.io. All rights reserved.
+#include "{{&user_data.bpFileName}}.h"
 
 {{#nodes}}
 {{#user_data.isCallback}}
