--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -18,10 +18,12 @@
 {{#user_data.isCallback}}
 {{> callback}}
 {{/user_data.isCallback}}
+{{^user_data.isCallback}}
 {{#user_data.isStruct}}
 {{> struct}}
 {{/user_data.isStruct}}
 {{#user_data.isClazz}}
 {{> clazz}}
 {{/user_data.isClazz}}
+{{/user_data.isCallback}}
 {{/nodes}}
