--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -3,10 +3,12 @@
 #pragma once
 
 #include "CoreMinimal.h"
-#include "AgoraPluginInterface.h"
-#include "AgoraHeaderBase.h"
+//#include "AgoraPluginInterface.h"
+//#include "AgoraHeaderBase.h"
+#include "AgoraBPuDataTypesBase.h"
 #include "UtilityAgoraBPuLogger.h"
 #include "UtilityUABTEnumConvertMacro.h"
+#include "UtilityUABTTypeHelper.h"
 
 {{#user_data.bpIncludeFiles}}
 {{{.}}}
