--- a/templates/type/clazz.mustache
+++ b/templates/type/clazz.mustache
@@ -1,7 +1,7 @@
 
 {{{user_data.commentCppStyle}}}
 UCLASS()
-class AGORAPLUGIN_API {{user_data.bpNodeName}} ; public UObject {
+class AGORAPLUGIN_API {{user_data.bpNodeName}} : public UObject {
   GENERATED_BODY()
 public:
 {{{user_data.bpContextInitDecl}}}
