--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -16,6 +16,8 @@
 
 #include "AgoraBPu{{&user_data.fileName}}.generated.h"
 
+using namespace agora::rtc::ue;
+
 {{#nodes}}
 {{#user_data.isCallback}}
 {{> callback}}
