--- a/templates/type/callback.mustache
+++ b/templates/type/callback.mustache
@@ -21,7 +21,7 @@ public:
 
 
 // For UE 4.25 UHT Parsing
-class {{name}}ClassWrapper : public {{{user_data.fullTypeWithNamespace}}}{};
+class {{name}}ClassWrapper : public {{{fullName}}}{};
 
 {{{user_data.commentCppStyle}}}
 UCLASS()
