bugfix: macro_scope_start / end

--- a/templates/bpplugin/bpenum_filecontent.mustache
+++ b/templates/bpplugin/bpenum_filecontent.mustache
@@ -36,6 +36,7 @@ namespace agora{
     namespace rtc{
         namespace ue{
             namespace UABTEnum{
+{{{user_data.macro_scope_start}}}
                 inline {{{fullName}}} ToRawValue({{{user_data.bpNodeName}}} Val){
                     {{{fullName}}} Result;
     {{#enum_constants}}
@@ -60,6 +61,7 @@ namespace agora{
     {{/enum_constants}}
                     return Result;
                 }
+{{{user_data.macro_scope_end}}}
             }
         }
     }
