--- a/templates/bpplugin/bpenum_filecontent.mustache
+++ b/templates/bpplugin/bpenum_filecontent.mustache
@@ -2,6 +2,8 @@
 // Copyright(c) 2024 Agora.io. All rights reserved.
 
 // [Notice] We use if-else rather than switch-case because of some enum entries with the same value
+#include "AgoraHeaderBase.h"
+
 
 {{#nodes}}
 {{#user_data.isEnumz}}
