--- a/templates/bpplugin/bp_callback_impl.mustache
+++ b/templates/bpplugin/bp_callback_impl.mustache
@@ -1,5 +1,5 @@
 
-void UAgoraBPu{{name}}::AddBlueprintCallbackExecutor(UAgoraBPu{{name}}CBExecutor* Executor){
+void {{{user_data.bpNodeName}}}::AddBlueprintCallbackExecutor({{{user_data.bpNodeName}}}CBExecutor* Executor){
 	if (Executor == nullptr)
 	{
 		UAgoraBPuLogger::PrintWarn(FString::Printf(TEXT("%s Null Callback Executor"), *FString(AG_FUNCTION_MACRO)));
@@ -12,7 +12,7 @@ void UAgoraBPu{{name}}::AddBlueprintCallbackExecutor(UAgoraBPu{{name}}CBExecutor
 }
 
 
-void UAgoraBPu{{name}}::RemoveAllBlueprintCallbackExecutors(){
+void {{{user_data.bpNodeName}}}::RemoveAllBlueprintCallbackExecutors(){
 
     {{#methods}}
     {{user_data.bpCallbackDelegateVarName}}.Clear();
@@ -27,7 +27,7 @@ void UAgoraBPu{{name}}::RemoveAllBlueprintCallbackExecutors(){
 
 {{{user_data.bpContextParamsDecl_BPFromCpp}}}
 
-        TWeakObjectPtr<UAgoraBPu{{name}}CBExecutor> SelfWeakPtr(this);
+        TWeakObjectPtr<{{{parent.user_data.bpNodeName}}}CBExecutor *> SelfWeakPtr(this);
         if(!SelfWeakPtr.IsValid())
             return;
             
@@ -58,6 +58,9 @@ void UAgoraBPu{{name}}::RemoveAllBlueprintCallbackExecutors(){
 
     UE_LOG(LogAgora, Warning, TEXT("%s"), *FString(AG_FUNCTION_MACRO));
 
+    {{#user_data.hasReturnVal}}
+    return {{{user_data.failureReturnVal}}};
+    {{/user_data.hasReturnVal}}
   }
   
 {{/methods}}
