--- a/templates/type/file_content.mustache
+++ b/templates/type/file_content.mustache
@@ -14,7 +14,7 @@
 {{{.}}}
 {{/user_data.bpIncludeFiles}}
 
-#include "AgoraBPu{{&user_data.fileName}}.generated.h"
+#include "{{&user_data.bpFileName}}.generated.h"
 
 using namespace agora::rtc::ue;
 
